@@ -1,0 +1,12 @@
+content 	yacybar			chrome/yacybar/content/
+skin		yacybar		global	chrome/yacybar/skin/
+
+locale		yacybar		en-US	chrome/yacybar/locale/en-US/
+locale		yacybar		de-DE	chrome/yacybar/locale/de-DE/
+
+overlay		chrome://browser/content/browser.xul			chrome://yacybar/content/yacybarOverlay.xul
+overlay		chrome://browser/content/browser.xul			chrome://yacybar/content/contentArea.xul
+overlay		chrome://browser/content/browser.xul			chrome://yacybar/content/statusBar.xul
+
+resource	yacybar			modules/
+
