@@ -1,28 +1,0 @@
-<?xml version="1.0"?>
-
-<RDF:RDF xmlns:RDF="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-         xmlns:chrome="http://www.mozilla.org/rdf/chrome#">
-
-  <RDF:Seq about="urn:mozilla:package:root">
-    <RDF:li resource="urn:mozilla:package:yacybar"/>
-  </RDF:Seq>
-
-  <RDF:Description about="urn:mozilla:package:yacybar"
-        chrome:displayName="YaCy Toolbar"
-        chrome:author="Alexander Schier"
-        chrome:name="yacybar"
-        chrome:extension="true">
-  </RDF:Description>
-  
-	<RDF:Seq about="urn:mozilla:overlays">
-	  <RDF:li resource="chrome://browser/content/browser.xul"/>
-	  <RDF:li resource="chrome://browser/content/preferences/preferences.xul"/>
-	</RDF:Seq>
-
-	<RDF:Seq about="chrome://browser/content/browser.xul">
-	  <RDF:li>chrome://yacybar/content/yacybarOverlay.xul</RDF:li>
-	  <RDF:li>chrome://yacybar/content/contentArea.xul</RDF:li>
-	  <RDF:li>chrome://yacybar/content/statusBar.xul</RDF:li>
-	</RDF:Seq>
-  
-</RDF:RDF>
