@@ -1,19 +1,0 @@
-<?xml version="1.0"?>
-
-<RDF:RDF xmlns:chrome="http://www.mozilla.org/rdf/chrome#"
-         xmlns:RDF="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
-
-    <RDF:Seq about="urn:mozilla:locale:root">
-        <RDF:li resource="urn:mozilla:locale:de-DE"/>
-    </RDF:Seq>
-    <RDF:Description about="urn:mozilla:locale:de-DE"
-                     chrome:author="Oliver Wunder"
-                     chrome:displayName="German(DE)"
-                     chrome:name="de-DE">
-        <chrome:packages>
-            <RDF:Seq about="urn:mozilla:locale:de-DE:packages">
-                <RDF:li resource="urn:mozilla:locale:de-DE:yacybar"/>
-            </RDF:Seq>
-        </chrome:packages>
-    </RDF:Description>
-</RDF:RDF>
