@@ -55,6 +55,7 @@
 <!ENTITY prefs.tabbox.tab.label.quickcrawl "QuickCrawl">
 <!ENTITY prefs.tabbox.tab.label.search "Search">
 <!ENTITY prefs.tabbox.tab.label.notification "Notification">
+<!ENTITY prefs.tabbox.tab.label.bookmarks "YaCy-Bookmarks">
 <!ENTITY prefs.tabpanel.description.peer "Settings needed to connect to your YaCy Peer">
 <!ENTITY prefs.tabpanel.label.value.peer "Peer Address">
 <!ENTITY prefs.tabpanel.label.accesskey.peer "A">
@@ -93,6 +94,7 @@
 <!ENTITY prefs.tabpanel.checkbox.label.enableMessageNotification "Enable message notification">
 <!ENTITY prefs.tabpanel.checkbox.label.enableCrawlNotification "Enable crawler notification">
 <!ENTITY prefs.tabpanel.checkbox.label.enableYaCyNewsNotification "Enable news notification">
+<!ENTITY prefs.tabpanel.description.bookmarks "Settings for yacy bookmarks">
 
 <!ENTITY quickcrawl.dialog.title "YaCyBar - QuickCrawl">
 <!ENTITY quickcrawl.groupbox.label.value.title "Title">
