@@ -1,17 +1,0 @@
-<?xml version="1.0"?>
-<RDF:RDF xmlns:RDF="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-         xmlns:chrome="http://www.mozilla.org/rdf/chrome#">
-
-   <RDF:Seq about="urn:mozilla:skin:root">
-      <RDF:li resource="urn:mozilla:skin:classic/1.0" />
-   </RDF:Seq>
-
-   <RDF:Description about="urn:mozilla:skin:classic/1.0">
-      <chrome:packages>
-         <RDF:Seq about="urn:mozilla:skin:classic/1.0:packages">
-            <RDF:li resource="urn:mozilla:skin:classic/1.0:yacybar" />
-         </RDF:Seq>
-      </chrome:packages>
-   </RDF:Description>
-
-</RDF:RDF>
